# grass-addons

./: .flake8  .git-blame-ignore-revs  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README  README.md  SUBMITTING  SUBMITTING_DOCS  SUBMITTING_PYTHON  SUBMITTING_SCRIPTS  SUBMITTING_TCLTK  SVN_HOWTO.txt  UNIT_TESTS.md  contributors.csv  pyproject.toml  r.flowfill.py  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: additional_checks.yml  apt.txt  black.yml  build_grass.sh  ci.yml  clang-format-check.yml  extra_requirements.txt  flake8.yml  install_r_packages.R  osgeo4w.yml  osgeo4w_build_addons.sh  post-pr-reviews.yml  requirements.txt  super-linter.yml  test.sh
HydroFOSS/: Makefile
HydroFOSS/r.evapo.PM/: Makefile  description.html  functions.c  local_proto.h  main.c
HydroFOSS/r.interception/: Makefile  description.html  main.c
HydroFOSS/r.snow/: description.html  main.c
IPCC/: gcm2grass.pl
LandDyn/: r.levol.iterator.py
LandDyn/r.accumulate.erdep.py/: r.accumulate.erdep.py
LandDyn/r.aggregate.stats/: r.aggregate.stats
LandDyn/r.agropast/: r.agropast
LandDyn/r.agropast.extensive/: r.agropast.extensive
LandDyn/r.agropast.intensive/: r.agropast.intensive
LandDyn/r.catchment.py/: r.catchment.py
general/: Makefile
gipe/: Makefile  Makefile.PM  Makefile.imagery  Makefile.raster  Makefile.scripts  README  gmmenu.tcl  gui_Makefile  imagery_Makefile  install_yanns_grass.sh  menudata.py  readme.gipe  scripts_Makefile
gipe/i.atcorr/src/: Makefile  Makefile.am  Makefile.in
gipe/i.atcorr/src/.deps/: 6s.Po  AerosolConcentration.Po  AerosolModel.Po  Interp.Po  Iwave.Po  Output.Po  common.Po  computations.Po  main.Po
grass6/: Makefile  README  raster
grass7/: .flake8  Makefile  grass7.txt  toolboxes.xml
grass7/raster/r.pops.spread/pops-core/tests/: CMakeLists.txt  test_date.cpp  test_quarantine.cpp  test_raster.cpp  test_scheduling.cpp  test_simulation.cpp
grassflyer/: README
gui/: Makefile
i.homography/: TODO  func.h  global.h  lu.c  matrix.c
i.landsat.acca/: Makefile  description.html  main.c
i.landsat.dehaze/: description.html
i.landsat.toar/: description.html  earth_sun.c  landsat.c  landsat.h  landsat_met.c  landsat_set.c  local_proto.h  main.c
i.points.auto/: analyze.c  curses.c  find_points_semi.c  globals.h  main.c  points.c  view.c
i.pr/: Makefile  README
i.topo.corr/: Makefile  correction.c
imagery/: Makefile
m.eigensystem/: cdiv.f
models/: README
r.boxcount/: bits.c  bits.h  description.html  file.c  file.h  main.c  record.h  sort.c  sort.h
r.boxcount.sh/: Makefile  description.html  r.boxcount.sh
r.out.netcdf/: description.html  main.c
r.rast4d/: QuickStart.txt  README  r.rast4d.init
raster/: Makefile
roadmap/: README
src/: Makefile
src/raster/r.pops.spread/pops-core/: CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  TECHNICALDEBT.md
src/raster/r.pops.spread/pops-core/contributing_docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  STYLE_GUIDE.md
src/raster/r.pops.spread/pops-core/include/pops/: config.hpp  date.hpp  deterministic_kernel.hpp  kernel.hpp  kernel_types.hpp  model.hpp  natural_anthropogenic_kernel.hpp  neighbor_kernel.hpp  quarantine.hpp  radial_kernel.hpp  raster.hpp  scheduling.hpp  simulation.hpp  spread_rate.hpp  statistics.hpp  switch_kernel.hpp  treatments.hpp  uniform_kernel.hpp  utils.hpp
src/raster/r.pops.spread/pops-core/tests/: test_date.cpp  test_deterministic.cpp  test_model.cpp  test_mortality.cpp  test_quarantine.cpp  test_raster.cpp  test_scheduling.cpp  test_simulation.cpp  test_spread_rate.cpp  test_statistics.cpp  test_treatments.cpp
tools/: check_examples_screenshots.py  check_examples_screenshots_tests.py  compress_all_png.sh  create_manuals_sitemap.py  module_key_list.sh  module_svn_propset.sh  std_dataset_display.py  svn-merge.sh  svn-rm.sh  svn64merge  svn65merge  svn70merge  svn7merge  svngrep  transifex_merge.sh
utils/: backport_po.sh  check_examples_screenshots_tests.py  compress_all_png.sh  create_manuals_sitemap.py  csv_dequote.pl  log_cpu.sh  mem_follow.sh  module_key_list.sh  module_svn_propset.sh  rfc4_dates_calculator.sh  std_dataset_display.py  svn-image.sh  svngrep  svnlog.sh  transifex_merge.sh
v.generalize/: MOVED_TO_MAIN_GRASS.txt  Makefile  description.html  displacement.c  main.c  matrix.c  matrix.h  misc.c  misc.h  network.c  point.c  point.h  pq.c  simplification.c  smoothing.c
v.path.obstacles/: MOVED_TO_MAIN_GRASS.txt  Makefile  data_structures.c  data_structures.h  description.html  geometry.c  geometry.h  main.c  proto.h  rotation_tree.c  rotation_tree.h  visibility.c  visibility.h
v.strahler/: Makefile  description.html  forest2tree.c  helper.c  main.c  r.strahler.sh  strahler.c  strahler.h  write.c
vector/: Makefile  v.mainchannel
wxgui_modeler/: atcorr_g6.gxm
(+8003 files in other folders)
