####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = atcorr

## INCLUDES were found outside kdevelop specific part

atcorr_SOURCES = AerosolConcentration.cpp Transform.cpp Iwave.cpp Interp.cpp GeomCond.cpp gauss.cpp computations.cpp AtmosModel.cpp Altitude.cpp AerosolModel.cpp Abstra.cpp main.cpp Output.cpp common.cpp 6s.cpp 
atcorr_LDADD   =  -lm


EXTRA_DIST = 6s.cpp 6s.h common.cpp common.h Output.cpp Output.h main.cpp Abstra.cpp Abstra.h AerosolModel.cpp AerosolModel.h Altitude.cpp Altitude.h AtmosModel.cpp AtmosModel.h computations.cpp gauss.cpp Gauss.h GeomCond.cpp GeomCond.h Interp.cpp Interp.h Iwave.cpp Iwave.h Transform.cpp Transform.h AerosolConcentration.cpp AerosolConcentration.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
atcorr_LDFLAGS = $(all_libraries) 
                                                                                
